--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,13 @@
 [package]
 name = "dl-openvdb-query-sys"
-version = "0.1.0"
+version = "0.1.1"
 authors = ["Moritz Moeller <virtualritz@protonmail.com>"]
 license = "BSD-3-Clause"
 license-file = "LICENSE.md"
 build = "build.rs"
 edition = "2018"
 description = "Auto-generated Rust bindings for 3Delight’s OpenVDB query API."
+repository = "https://github.com/virtualritz/dl-openvdb-query-sys"
 
 [features]
 # Whether to download a dynamic library version of 3Delight
